crates/flotilla-tui/tests/snapshots/snapshots__action_menu.snap
---
source: crates/flotilla-tui/tests/snapshots.rs
expression: output
---
 ⚓  flotilla  |  🚢  convoys  | my-project ×  | [+]
                                                                    ⚙   ┌ Preview ─────────────────────────────────────┐
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                    ┌ Actions ─────────────────────────────────────┐                                   │
                                    │▸  1: Create workspace                        │                                   │
                                    │   2: Open PR in browser                      │                                   │
                                    │   3: Remove worktree                         │                                   │
                                    │                                              │                                   │
                                    │                                              │                                   │
                                    │                                              │                                   │
                                    │                                              │                                   │
                                    │                                              │                                   │
                                    │                                              │                                   │
                                    │                                              │                                   │
                                    └──────────────────────────────────────────────┘                                   │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        └──────────────────────────────────────────────┘
ACTIONS                      <j> DOWN  <k> UP  <ENT> SELECT  <ESC> CLOSE 
