crates/flotilla-tui/tests/snapshots/snapshots__branch_input_generating_popup.snap
---
source: crates/flotilla-tui/tests/snapshots.rs
expression: output
---
 ⚓  flotilla  |  🚢  convoys  | my-project ×  | [+]
                                                                    ⚙   ┌ Preview ─────────────────────────────────────┐
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                              ┌ New Branch ──────────────────────────────────────────────┐                             │
                              │  Generating branch name...                               │                             │
                              │                                                          │                             │
                              │                                                          │                             │
                              │                                                          │                             │
                              └──────────────────────────────────────────────────────────┘                             │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        └──────────────────────────────────────────────┘
NEW BRANCH                                                                                   - Generating branch name...
