crates/flotilla-tui/tests/snapshots/snapshots__command_palette_selection.snap
---
source: crates/flotilla-tui/tests/snapshots.rs
expression: output
---
 ⚓  flotilla  |  🚢  convoys  | my-project ×  | [+]
                                                                    ⚙   ┌ Preview ─────────────────────────────────────┐
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
:                            <ENT> RUN  <ESC> CLOSE  <TAB> FILL                                   ◫ auto   @local
  repo               Manage repositories
  environment        Manage environments
  env                Manage environments
  checkout           Manage checkouts
  convoy             Manage convoys
  dispatch           Inspect proposed dispatch work
  crew               Communicate with crew members
  cr                 Code review
