crates/flotilla-tui/tests/snapshots/snapshots__config_screen.snap
---
source: crates/flotilla-tui/tests/snapshots.rs
expression: output
---
 ⚓  flotilla  |  🚢  convoys  | my-project | [+]
┌ Providers ───────────────────────────────────────────────────────────┐┌ Event Log ───────────────────────────── INFO ┐
│Role             Provider                 Status                      ││                                              │
│VCS              Git                                                  ││                                              │
│Checkout mgr     Git Worktrees                                        ││                                              │
│Change request   GitHub                                               ││                                              │
│Issue tracker    GitHub                                               ││                                              │
│Cloud agents     Claude                   ✓                           ││                                              │
│AI utility       —                                                    ││                                              │
│Workspace mgr    —                                                    ││                                              │
│Terminal pool    —                                                    ││                                              │
│Environment      —                                                    ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
└──────────────────────────────────────────────────────────────────────┘│                                              │
┌ Hosts ───────────────────────────────────────────────────────────────┐│                                              │
└──────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────────┘
FLOTILLA                     <q> QUIT  <h> HELP  <?> CTX  <:> COMMANDS  <j> DOWN  <k> UP 
