crates/flotilla-tui/tests/snapshots/snapshots__debug_panel_with_correlation_details.snap
---
source: crates/flotilla-tui/tests/snapshots.rs
expression: output
---
 ⚓  flotilla  |  🚢  convoys  | my-project ×  | [+]
── Checkouts ────────────────────────────────────────────────────── ⚙   ┌ Preview ─────────────────────────────────────┐
      Source     Path  Description Branch WT  WS  PR   SS   Issues Git  │Description: Feature branch checkout          │
▸  ○               fe… Feature br… feat-… ✓                             │Branch: feat-xyz                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        └──────────────────────────────────────────────┘
                                                                        ┌ Debug (D to toggle) ─────────────────────────┐
                                                                        │Group #12                                     │
                                                                        │branch: feat-xyz                              │
                                                                        │checkout: /test/my-project/feat-xyz           │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        └──────────────────────────────────────────────┘
: for commands               <q> QUIT  <h> HELP  <?> CTX  <:> COMMANDS  </> FIND              ◫ auto   @local
