crates/flotilla-tui/tests/snapshots/snapshots__delete_confirm_remote_host.snap
---
source: crates/flotilla-tui/tests/snapshots.rs
expression: output
---
 ⚓  flotilla  |  🚢  convoys  | my-project ×  | [+]
                                                                    ⚙   ┌ Preview ─────────────────────────────────────┐
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                        ┌ Remove Worktree on feta ─────────────────────────────────────────────┐                       │
                        │Branch: feat-remote                                                   │                       │
                        │                                                                      │                       │
                        │PR: MERGED                                                            │                       │
                        │Merge commit: def5678                                                 │                       │
                        │                                                                      │                       │
                        │                                                                      │                       │
                        │✓ Safe to delete                                                      │                       │
                        │                                                                      │                       │
                        │y/Enter: confirm    n/Esc: cancel                                     │                       │
                        │                                                                      │                       │
                        │                                                                      │                       │
                        │                                                                      │                       │
                        │                                                                      │                       │
                        └──────────────────────────────────────────────────────────────────────┘                       │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        └──────────────────────────────────────────────┘
CONFIRM DELETE               <y> YES  <n> NO 
