crates/flotilla-tui/tests/snapshots/snapshots__delete_confirm_safe_to_delete.snap
---
source: crates/flotilla-tui/tests/snapshots.rs
expression: output
---
 ⚓  flotilla  |  🚢  convoys  | my-project ×  | [+]
                                                                    ⚙   ┌ Preview ─────────────────────────────────────┐
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                        ┌ Remove Worktree ─────────────────────────────────────────────────────┐                       │
                        │Branch: feat-cleanup                                                  │                       │
                        │                                                                      │                       │
                        │PR: MERGED                                                            │                       │
                        │Merge commit: abc1234                                                 │                       │
                        │                                                                      │                       │
                        │                                                                      │                       │
                        │✓ Safe to delete                                                      │                       │
                        │                                                                      │                       │
                        │y/Enter: confirm    n/Esc: cancel                                     │                       │
                        │                                                                      │                       │
                        │                                                                      │                       │
                        │                                                                      │                       │
                        │                                                                      │                       │
                        └──────────────────────────────────────────────────────────────────────┘                       │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        └──────────────────────────────────────────────┘
CONFIRM DELETE               <y> YES  <n> NO 
